fix: del z-index

--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -5,7 +5,7 @@
   background-size: cover;
   overflow: hidden;
   position: relative;
-  z-index: -2;
+  // z-index: -2;
   min-width: 1386px;
 }
 
